Changed text, size and spacing  on registrera-page. Fixed image on landing page so there is no space between image and navbar.

--- a/assets/stylesheets/app/app.css
+++ b/assets/stylesheets/app/app.css
@@ -623,3 +623,6 @@ margin-left: 350px;
   }
 }
 
+.background-image-top-margin {
+margin-top: -30px;
+}
